--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'"> -->
     <!-- <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'"> -->
-    <title>Hello World!</title>
+    <title>Photo Sorter</title>
     
     <link rel="stylesheet" href="./static/css/main.min.css">
     <link href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
@@ -79,7 +79,7 @@
         <a href="#" data-action="reset" class="btn"><i class='bx bx-badge-check'></i> meer foto's beoordelen</a>
       </div>
       <footer>
-        <p><small>Gemaakt met &lt;3 door <a href="https://www.instagram.com/lennertderyck/">@lennertderyck</a> – code beschikbaar GitHub</small></p>
+        <p><small>Gemaakt met &lt;3 door <a href="https://www.instagram.com/lennertderyck/">@lennertderyck</a> – code <a href="https://github.com/lennertderyck/photo-sorter">GitHub</a></small></p>
       </footer>
     </section>
     <!-- You can also require other files to run in this process -->
