--- a/index.html
+++ b/index.html
@@ -10,9 +10,18 @@
     <link rel="stylesheet" href="./static/css/main.min.css">
     <link href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+    <link rel="stylesheet" href="https://use.typekit.net/vod7dhx.css">
+    <!-- <link rel="stylesheet" href="https://use.typekit.net/vod7dhx.css"> -->
   </head>
   <body>
-    <section id="step1">
+    <section id="step1" class="drag">
+      <div class="drag__confirm">
+        <div class="wrapper">
+          <i class='bx bxs-hot'></i>
+          <h2 class="section-head__title">Drop it like it's hot</h2>
+          <p class="section-head__post">Laat je map met afbeeldingen hier los</p>
+        </div>
+      </div>
       <form id="selectDir">
         <div class="filedrop">
           <div class="filedrop__overlay">
@@ -29,7 +38,7 @@
         </div>
       </form>
       <a href="#step2" class="btn"><i class='bx bx-badge-check'></i> al foto's geimporteerd?</a>
-      <!-- <a href="#step2" id="toStep2" class="btn btn--main btn--negative">volgende</a> -->
+      <!-- <ea href="#step2" id="toStep2" class="btn btn--main btn--negative">volgende</a> -->
     </section>
   
     <section id="step2">
@@ -38,6 +47,19 @@
         <h4 class="section-head__pre">Stap 2</h4>
         <h2 class="section-head__title">Markeer je foto's</h2>
       </div>
+      <div id="suggestionPreview" class="animate__animated animate__faster">
+        <img src="file:///Users/lennertderyck/Pictures/VOORKAMP 290619/IMG_2142.JPG" alt="">
+      </div>
+      <div id="controls" class="controls animate__animated animate__faster">
+        <div class="moderate">
+          <div class="moderate__btn moderate__btn--prev" data-action="prevSuggestion"><i class='bx bx-left-arrow-alt' ></i></div>
+          <div class="moderate__btn moderate__btn--accept"><i class='bx bx-like' ></i></div>
+          <a href="#step3" id="toStep3" onclick="console.log(this)" class="btn btn--main animate__animated animate__faster">volgende</a>
+          <div class="moderate__btn moderate__btn--reject"><i class='bx bx-dislike' ></i></div>
+          <div class="moderate__btn moderate__btn--next" data-action="nextSuggestion"><i class='bx bx-right-arrow-alt' ></i></div>
+        </div>
+        <p id="suggestionCounter"></p>
+      </div>
       <div id="photoList">
         <div class="suggestion suggestion__pre">
           <i class='bx bx-loader'></i>
@@ -45,17 +67,9 @@
           <p>Deze zullen hier verschijnen</p>
         </div>
       </div>
-      <div id="controls" class="controls">
-        <p id="suggestionCounter"></p>
-        <div class="moderate">
-          <div class="moderate__btn moderate__btn--accept"><i class='bx bx-like' ></i></div>
-          <div class="moderate__btn moderate__btn--reject"><i class='bx bx-dislike' ></i></div>
-        </div>
-        <a href="#step3" id="toStep3" onclick="console.log(this)" class="btn btn--main animate__animated animate__faster">volgende</a>
-        <div class="btn-group">
-          <a href="#" id="reImport" class="btn" data-action="reset"><i class='bx bx-image-add'></i> terug naar importeren</a>
-          <a href="#step3" class="btn" data-action="moderateSkip"><i class='bx bx-skip-next-circle'></i> resterend overslaan</a>
-        </div>
+      <div class="btn-group">
+        <a href="#" id="reImport" class="btn" data-action="reset"><i class='bx bx-image-add'></i> terug naar importeren</a>
+        <a href="#step3" class="btn" data-action="moderateSkip"><i class='bx bx-skip-next-circle'></i> resterend overslaan</a>
       </div>
     </section>
     
