--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h2 class="section-head__title">Markeer je foto's</h2>
       </div>
       <div id="suggestionPreview" class="animate__animated animate__faster">
-        <img src="file:///Users/lennertderyck/Pictures/VOORKAMP 290619/IMG_2142.JPG" alt="">
+        <img src="" alt="">
       </div>
       <div id="controls" class="controls animate__animated animate__faster">
         <div class="moderate">
@@ -89,11 +89,11 @@
           <div class="input-bundle input-bundle--horizontal">
             <div class="input-group">
               <label for="folderNameAccept">Goede foto's</label>
-              <input type="text" name="foldername_accept" id="folderNameAccept" value="accept">
+              <input type="text" name="foldername_accept" id="folderNameAccept" value="GOEDGEKEURD">
             </div>
             <div class="input-group">
               <label for="folderNameReject">Slechte foto's</label>
-              <input type="text" name="foldername_reject" id="folderNameReject" value="reject">
+              <input type="text" name="foldername_reject" id="folderNameReject" value="NIET GOED">
             </div>
           </div>
         </div>
@@ -106,7 +106,7 @@
         <i class='bx bx-chair'></i>
         <h4 class="section-head__pre">Stap 4</h4>
         <h2 class="section-head__title">Leun achterover en relax</h2>
-        <p class="section-head__post">Je foto's werden succesvol ingedeeld</p>
+        <p class="section-head__post">Je foto's worden momenteel verplaatst, dit kan even duren</p>
       </div>
       <img class="meme" src="https://media.giphy.com/media/s2qXK8wAvkHTO/source.gif" alt="" width="300px">
       <div class="btn-group">
