--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <i class='bx bx-chair'></i>
         <h4 class="section-head__pre">Stap 4</h4>
         <h2 class="section-head__title">Leun achterover en relax</h2>
-        <p class="section-head__post">Je foto's worden momenteel verplaatst, dit kan even duren</p>
+        <p class="section-head__post">Hoera! Je foto's worden momenteel verplaatst, dit kan even duren</p>
       </div>
       <img class="meme" src="https://media.giphy.com/media/s2qXK8wAvkHTO/source.gif" alt="" width="300px">
       <div class="btn-group">
