--- a/index.html
+++ b/index.html
@@ -118,6 +118,19 @@
       </footer>
     </section>
     
+    <div id="newVersionNotify" class="animate__animated animate__faster animate__delay-2s">
+      <div class="background"></div>
+      <div class="message">
+        <i class='bx bx-cloud'></i>
+        <h3>Je hebt waarschijnlijk<br>een update gemist</h3>
+        <p><small>Er staat een nieuwe update op jou te wachten</small></p>
+        <div class="btn-group">
+          <a id="updateDownload" href="" class="btn btn--simple" download><i class='bx bxs-arrow-to-bottom'></i> Download</a>
+          <button data-action="closeUpdateMessage" class="btn btn--simple"><i class='bx bx-x-circle'></i> sluiten</button>
+        </div>
+      </div>
+    </div>
+    
     <script type="module" src="static/js/app.js"></script>
     <!-- You can also require other files to run in this process -->
     <script type="module" src="./renderer.js"></script>
