--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
     <link rel="stylesheet" href="https://use.typekit.net/vod7dhx.css">
     <!-- <link rel="stylesheet" href="https://use.typekit.net/vod7dhx.css"> -->
+    
+    <!-- TODO: add analythics -->
   </head>
   <body>
     <section id="step1" class="drag">
