--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <a href="#" data-action="reset" class="btn"><i class='bx bx-badge-check'></i> meer foto's beoordelen</a>
       </div>
       <footer>
-        <p><small>Gemaakt met &lt;3 door <a href="https://www.instagram.com/lennertderyck/">@lennertderyck</a> – code <a href="https://github.com/lennertderyck/photo-sorter">GitHub</a></small></p>
+        <p><small>Gemaakt met &lt;3 door <a href="https://www.instagram.com/lennertderyck/" target="_blank" rel="noopener">@lennertderyck</a> – code <a href="https://github.com/lennertderyck/photo-sorter" target="_blank" rel="noopener">GitHub</a></small></p>
       </footer>
     </section>
     
